--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 				<img src="IMAGES/LOGO.png">
 			</div>
 			<ul>
-				<li><a href="home.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="#">About</a></li>
 				<li><a href="lifestyle.html">Lifestyle</a></li>
 				<li><a href="events.html">Events</a></li>
