--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
 					<img src="IMAGES/LOGO.png">
 				</div>
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="lifestyle.html">Lifestyle</a></li>
 					<li class="active"><a href="#">Events</a></li>
