--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>ABOUT</title>
-	<link rel="stylesheet" type="text/css" href="css/styly.css">
+	<link rel="stylesheet" type="text/css" href="CSS/styly.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 				<li class="active"><a href="#">About</a></li>
 				<li><a href="lifestyle.html">Lifestyle</a></li>
 				<li><a href="events.html">Events</a></li>
-				<li><a href="contact.html">Get In Touch</a></li>
+				<li><a href="C ontact.html">Get In Touch</a></li>
 			</ul>
 		</div>
 		<div class="title">
