--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="lifestyle.html">Lifestyle</a></li>
 					<li class="active"><a href="#">Events</a></li>
-					<li><a href="contact.html">Get In Touch</a></li>
+					<li><a href="Contact.html">Get In Touch</a></li>
 				</ul>
 			</div>
 			<div class="title">
