--- a/events.html
+++ b/events.html
@@ -57,18 +57,18 @@
         </div>
 		</section>
 	</div>
-	<!-- dont forget to edit footer -->
+	
 	<footer> 
 		<div class="footer-content">
 			<h3>GABORONE, MAGERBA</h3>
 			<P>be sure to check us out on social media</P>
 				<ul class="socials">
 					 
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i> </a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i> </a></li>
-					<li><a href="#"><i class="fa fa-youtube"></i> </a></li>
-					<li><a href="#"><i class="fa fa-linkedin-square"></i> </a></li>
+					<li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="twitter.com"><i class="fa fa-twitter"></i> </a></li>
+					<li><a href="google.com"><i class="fa fa-google-plus"></i> </a></li>
+					<li><a href="youtube.com"><i class="fa fa-youtube"></i> </a></li>
+					<li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i> </a></li>
 
 				</ul>
 		</div>
