--- a/thankyou.html
+++ b/thankyou.html
@@ -28,7 +28,7 @@
 	</header>
 	<div class="main">
 		<section>
-			<img src="IMAGES/T1.PNG">
+			<img src="IMAGES/T1.png">
 		</section>
 	</div>
 	<!-- dont forget to edit footer -->
