--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="IMAGES/LOGO.png">
+				<a href="index.html"><img src="IMAGES/LOGO.png"></a>
 			</div>
 			<ul>
 				<li><a href="index.html">Home</a></li>
