--- a/lifestyle.html
+++ b/lifestyle.html
@@ -11,7 +11,7 @@
 		<nav>
 			<div class="main">
 				<div class="logo">
-					<img src="IMAGES/LOGO.png">
+					<a href="index.html"><img src="IMAGES/LOGO.png"></a>
 				</div>
 				<ul>
 					<li><a href="index.html">Home</a></li>
